--- a/play_motion_msgs/package.xml
+++ b/play_motion_msgs/package.xml
@@ -1,20 +1,18 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>play_motion_msgs</name>
   <version>0.4.0</version>
   <description>Messages, services and actions used by play_motion.</description>
 
-  <maintainer email="paul.mathieu@pal-robotics.com">Paul Mathieu</maintainer>
+  <maintainer email="bence.magyar@pal-robotics.com">Bence Magyar</maintainer>
   <author email="paul.mathieu@pal-robotics.com">Paul Mathieu</author>
 
   <license>BSD</license>
 
   <buildtool_depend>catkin</buildtool_depend>
 
-  <build_depend>actionlib_msgs</build_depend>
+  <depend>actionlib_msgs</depend>
   <build_depend>message_generation</build_depend>
-
-  <run_depend>actionlib_msgs</run_depend>
-  <run_depend>message_runtime</run_depend>
+  <exec_depend>message_runtime</exec_depend>
 
 </package>
